adding ai search-1(made no changes to the schema

--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,8 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
+    "natural": "^8.0.1",
+    "openai": "^4.81.0",
     "server": "file:"
   }
 }
