--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "lucide-react": "^0.471.1",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
+    "react-avatar": "^5.0.3",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
